[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-fnv1a-hash = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = {version = "0.4.17", features = ["max_level_off"] }
clap = {version = "3.1.18", features = ["derive"] } 
crossbeam-channel = "0.5.4"
mysql = "22.1.0"
